# api/comment_grpc.pb.go
@@ -1,0 +1,288 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.0
+// - protoc             (unknown)
+// source: comment.proto
+
+package api
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	CommentService_CreateTopComment_FullMethodName = "/comment.CommentService/CreateTopComment"
+	CommentService_CreateReply_FullMethodName      = "/comment.CommentService/CreateReply"
+	CommentService_ListTopComments_FullMethodName  = "/comment.CommentService/ListTopComments"
+	CommentService_ListReplies_FullMethodName      = "/comment.CommentService/ListReplies"
+	CommentService_DeleteComment_FullMethodName    = "/comment.CommentService/DeleteComment"
+)
+
+// CommentServiceClient is the client API for CommentService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// CommentService
+type CommentServiceClient interface {
+	// POST /api/v1/posts/{post_uid}/comments 创建一级评论
+	CreateTopComment(ctx context.Context, in *CreateTopCommentRequest, opts ...grpc.CallOption) (*CreateTopCommentResponse, error)
+	// POST /api/v1/comments/{uid}/replies 回复评论
+	CreateReply(ctx context.Context, in *CreateReplyRequest, opts ...grpc.CallOption) (*CreateReplyResponse, error)
+	// GET /api/v1/posts/{post_uid}/comments 一级评论列表
+	ListTopComments(ctx context.Context, in *ListTopCommentsRequest, opts ...grpc.CallOption) (*ListTopCommentsResponse, error)
+	// GET /api/v1/comments/{uid}/replies 回复列表
+	ListReplies(ctx context.Context, in *ListRepliesRequest, opts ...grpc.CallOption) (*ListRepliesResponse, error)
+	// DELETE /api/v1/comments/{uid} 软删评论
+	DeleteComment(ctx context.Context, in *DeleteCommentRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+}
+
+type commentServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewCommentServiceClient(cc grpc.ClientConnInterface) CommentServiceClient {
+	return &commentServiceClient{cc}
+}
+
+func (c *commentServiceClient) CreateTopComment(ctx context.Context, in *CreateTopCommentRequest, opts ...grpc.CallOption) (*CreateTopCommentResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateTopCommentResponse)
+	err := c.cc.Invoke(ctx, CommentService_CreateTopComment_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *commentServiceClient) CreateReply(ctx context.Context, in *CreateReplyRequest, opts ...grpc.CallOption) (*CreateReplyResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateReplyResponse)
+	err := c.cc.Invoke(ctx, CommentService_CreateReply_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *commentServiceClient) ListTopComments(ctx context.Context, in *ListTopCommentsRequest, opts ...grpc.CallOption) (*ListTopCommentsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListTopCommentsResponse)
+	err := c.cc.Invoke(ctx, CommentService_ListTopComments_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *commentServiceClient) ListReplies(ctx context.Context, in *ListRepliesRequest, opts ...grpc.CallOption) (*ListRepliesResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListRepliesResponse)
+	err := c.cc.Invoke(ctx, CommentService_ListReplies_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *commentServiceClient) DeleteComment(ctx context.Context, in *DeleteCommentRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, CommentService_DeleteComment_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// CommentServiceServer is the server API for CommentService service.
+// All implementations must embed UnimplementedCommentServiceServer
+// for forward compatibility.
+//
+// CommentService
+type CommentServiceServer interface {
+	// POST /api/v1/posts/{post_uid}/comments 创建一级评论
+	CreateTopComment(context.Context, *CreateTopCommentRequest) (*CreateTopCommentResponse, error)
+	// POST /api/v1/comments/{uid}/replies 回复评论
+	CreateReply(context.Context, *CreateReplyRequest) (*CreateReplyResponse, error)
+	// GET /api/v1/posts/{post_uid}/comments 一级评论列表
+	ListTopComments(context.Context, *ListTopCommentsRequest) (*ListTopCommentsResponse, error)
+	// GET /api/v1/comments/{uid}/replies 回复列表
+	ListReplies(context.Context, *ListRepliesRequest) (*ListRepliesResponse, error)
+	// DELETE /api/v1/comments/{uid} 软删评论
+	DeleteComment(context.Context, *DeleteCommentRequest) (*emptypb.Empty, error)
+	mustEmbedUnimplementedCommentServiceServer()
+}
+
+// UnimplementedCommentServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedCommentServiceServer struct{}
+
+func (UnimplementedCommentServiceServer) CreateTopComment(context.Context, *CreateTopCommentRequest) (*CreateTopCommentResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method CreateTopComment not implemented")
+}
+func (UnimplementedCommentServiceServer) CreateReply(context.Context, *CreateReplyRequest) (*CreateReplyResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method CreateReply not implemented")
+}
+func (UnimplementedCommentServiceServer) ListTopComments(context.Context, *ListTopCommentsRequest) (*ListTopCommentsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListTopComments not implemented")
+}
+func (UnimplementedCommentServiceServer) ListReplies(context.Context, *ListRepliesRequest) (*ListRepliesResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListReplies not implemented")
+}
+func (UnimplementedCommentServiceServer) DeleteComment(context.Context, *DeleteCommentRequest) (*emptypb.Empty, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteComment not implemented")
+}
+func (UnimplementedCommentServiceServer) mustEmbedUnimplementedCommentServiceServer() {}
+func (UnimplementedCommentServiceServer) testEmbeddedByValue()                        {}
+
+// UnsafeCommentServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to CommentServiceServer will
+// result in compilation errors.
+type UnsafeCommentServiceServer interface {
+	mustEmbedUnimplementedCommentServiceServer()
+}
+
+func RegisterCommentServiceServer(s grpc.ServiceRegistrar, srv CommentServiceServer) {
+	// If the following call panics, it indicates UnimplementedCommentServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&CommentService_ServiceDesc, srv)
+}
+
+func _CommentService_CreateTopComment_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateTopCommentRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CommentServiceServer).CreateTopComment(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: CommentService_CreateTopComment_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CommentServiceServer).CreateTopComment(ctx, req.(*CreateTopCommentRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _CommentService_CreateReply_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateReplyRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CommentServiceServer).CreateReply(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: CommentService_CreateReply_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CommentServiceServer).CreateReply(ctx, req.(*CreateReplyRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _CommentService_ListTopComments_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListTopCommentsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CommentServiceServer).ListTopComments(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: CommentService_ListTopComments_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CommentServiceServer).ListTopComments(ctx, req.(*ListTopCommentsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _CommentService_ListReplies_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListRepliesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CommentServiceServer).ListReplies(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: CommentService_ListReplies_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CommentServiceServer).ListReplies(ctx, req.(*ListRepliesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _CommentService_DeleteComment_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteCommentRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CommentServiceServer).DeleteComment(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: CommentService_DeleteComment_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CommentServiceServer).DeleteComment(ctx, req.(*DeleteCommentRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// CommentService_ServiceDesc is the grpc.ServiceDesc for CommentService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var CommentService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "comment.CommentService",
+	HandlerType: (*CommentServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateTopComment",
+			Handler:    _CommentService_CreateTopComment_Handler,
+		},
+		{
+			MethodName: "CreateReply",
+			Handler:    _CommentService_CreateReply_Handler,
+		},
+		{
+			MethodName: "ListTopComments",
+			Handler:    _CommentService_ListTopComments_Handler,
+		},
+		{
+			MethodName: "ListReplies",
+			Handler:    _CommentService_ListReplies_Handler,
+		},
+		{
+			MethodName: "DeleteComment",
+			Handler:    _CommentService_DeleteComment_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "comment.proto",
+}
